[level 0] Title: 배열 만들기 6, Time: 36.78 ms, Memory: 140 MB -BaekjoonHub